<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- LoginActivity -->
	<string name="app_name">牧童</string>
	<string name="user_name">用户名：</string>
	<string name="password">密码：</string>
	<string name="state">状态：</string>
	<string-array name="state_list">
		<item>在线</item>
		<item>隐身</item>
	</string-array>
	<string name="old_password">旧密码：</string>
	<string name="new_password">新密码：</string>
	<string name="new_password_again">确认下：</string>
	<string name="save_user_name">保存用户名</string>
	<string name="save_password">保存密码</string>
	<string name="login">登录</string>
	<string name="register">注册</string>
	<string name="clear_account">清除帐号</string>
	<string name="network_setting">网络设置</string>
	<string name="feedback">意见反馈</string>
	<string name="about">关于</string>
	<string name="exit_program">退出程序</string>
	<string name="logout">注销</string>
	<!-- RegisterActivity -->
	<string name="conform_password">确认密码：</string>
	<string name="real_name">真实姓名：</string>
	<string name="more_info">更多信息</string>
	<string name="school">学校：</string>
	<string name="place">所在地：</string>
	<string name="birthday">生日：</string>
	<string name="agree_rules">我以阅读并同意相关条款</string>
	<string name="notes">注：标记“*”的为必填项目</string>
	<!-- MainActivity -->
	<string name="map_tab">地图</string>
	<string name="friend_tab">好友</string>
	<string name="place_tab">大富翁</string>
	<string name="check_in_tab">签到</string>
	<!-- GoogleMapActivity -->
	<string name="refresh_map">刷新地图</string>
	<string name="view_friends">查看好友</string>
	<string name="view_places">查看地点</string>
	<string name="create_place">新建地点</string>
	<string name="setting">设置</string>
	<string name="add_friends">添加好友</string>
	<string name="search_friends">搜索好友</string>
	<string name="recommend_friends">推荐好友</string>
	<string name="delete_chat_log">删除聊天记录</string>
	<string name="program_setting">设置</string>
	<string name="refresh_my_places">刷新我的地点</string>
	<string name="refresh_my_checkins">刷新我的签到</string>
	<string name="modify_customizeinfo">修改定制</string>
	<string name="addnewone">添加</string>
	<string name="homepage">主页</string>
	<string name="create_title">输入内容</string>
	<string name="create_place_name">地点名称</string>
	<string name="create_ok">确定</string>
	<string name="create_cancel">取消</string>
	<string name="can_not_create">此地点距附近已有地点太近，不可以新建地点！</string>
	<string name="checkin_button">找地方签到吧</string>
	<!-- FriendActivity -->
	<string-array name="friend_list_type">
		<item>好友</item>
	</string-array>
	<string name="recent_time">距离最近一次更新位置已有：</string>
	<!-- FriendManagerActivity -->
	<string-array name="friend_manager_list">
		<item>发起聊天</item>
		<item>查看聊天记录</item>
		<item>查看好友详细资料</item>
		<item>查看好友签到记录</item>
		<item>解除好友关系</item>
		<item>删除聊天记录</item>
	</string-array>
	<string name="delete_friend_ok">好友删除成功！</string>
	<string name="delete_friend_fail">好友删除失败，请重试！</string>
	<!-- SettingActivity -->
	<string name="personal_info">我的资料</string>
	<string name="avatar">头像</string>
	<string-array name="setting_list">
		<item>我的状态</item>
		<item>个人资料</item>
		<item>修改密码</item>
		<item>同步设置</item>
	</string-array>
	<string name="choose_image">选择图片</string>
	<string-array name="choose_list">
		<item>从相册</item>
		<item>从照相机</item>
	</string-array>
	<!-- SynchronousActivity -->
	<string-array name="sync_list">
		<item>同步到新浪微博</item>
		<item>同步到人人网</item>
		<item>同步到Twitter</item>
	</string-array>
	<!-- FeedbackActivity -->
	<string name="tips_textview">欢迎您提出宝贵的意见和建议，我们将竭诚为您服务：</string>
	<string name="submit_button"> 提 交    </string>
	<string name="email_editview">E-mail</string>
	<!-- PlaceActivity -->
	<string name="remain_money">账户余额：</string>
	<string name="my_places">我的地点：</string>
	<string name="places_name">地点名称：</string>
	<string name="places_price">地点价格：</string>
	<string name="buyIt">我要购买</string>
	<string name="changeIt">修改信息</string>
	<string name="buyok">购买成功</string>
	<string name="buyfake">购买失败</string>
	<string name="commentfake">评论失败</string>
	<string name="addsubfake">添加子地点失败</string>
	<string name="owenername">拥有者用户名：</string>
	<string name="currentprice">当前地价：</string>
	<string name="editname">(点击添加地点名称)</string>
	<string name="editphoto">(点击下图设置地点照片吧)</string>
	<string name="editcomment">(点击添加你的评论)</string>
	<!-- ModifyCustomizeinfoActivity -->
	<string name="customizeinfo_cate">美食</string>
	<string name="customizeinfo_living">生活服务</string>
	<string name="customizeinfo_shopping">购物</string>
	<string name="customizeinfo_beauty">丽人</string>
	<string name="customizeinfo_car">爱车</string>
	<string name="customizeinfo_entertainment">休闲娱乐</string>
	<string name="customizeinfo_marriage">结婚</string>
	<string name="customizeinfo_hotel">酒店</string>
	<string name="customizeinfo_parent_offspring">亲子</string>
	<string name="customizeinfo_sports">运动健身</string>
	<string name="customizeinfo_confirm">确认修改</string>
	<!-- PlaceInformationActivity -->
	<string name="place_information_tab">地点信息</string>
	<string name="place_comment_tab">点评</string>
	<string name="place_check_in_tab">签到</string>
	<string name="place_subplace_tab">子地点</string>
	<string name="place_offer_tab">优惠信息</string>
	<string name="create_comment">评论内容</string>
	<string name="refresh_comment">刷新评论</string>
	<string name="refresh_subplace">刷新子地点</string>
	<string name="refresh_topcheckin">刷新签到王子</string>
	<string name="refresh_placeinfo">刷新地点信息</string>
	<string name="place_description">地点描述：</string>
	<!-- PlaceCheckInActivity -->
	<string name="place_checkin_button">我要签到</string>
	<string name="place_checkin_tab">签到小王子</string>
	<string name="my_checkin_times">我来过的次数：</string>
	<string name="cannot_checkin">这个地方太远，不能签到哦^_^</string>
	<string name="has_checkedin">今天已经签过了，不要太贪心啊。</string>
	<!-- CheckInActivity -->
	<string name="my_checkins">我的签到</string>
	<string name="my_honors">我的荣誉</string>
	<string name="checkin_place_name">名称：</string>
	<string name="checkin_place_time">次数：</string>

	<string name="user_name_existed">用户名已经存在</string>
	<string name="password_not_same">密码不一致</string>
	<string name="info_missing">缺少必要信息</string>
	<string name="register_success">注册成功</string>
	<string name="waitting">请稍候。。。</string>
	<string name="login_failed">用户名或密码错误</string>
	<string name="ok">知道了</string>
	<string name="submit">提交</string>
	<string name="search">搜索</string>
	<string name="at_least_one_info">至少需要填写一项</string>
	<string name="no_friend_request">没有好友请求</string>
	<string name="request_friend">请求添加好友</string>
	<string name="request_sent">请求已发送</string>
	<string name="request_fail">请求发送失败</string>
	<string name="new_friend_request">有新好友请求</string>
	<string name="agree_friend_request">接受好友请求</string>
	<string name="reject_friend_request">拒绝好友请求</string>
	<string name="refresh_friend">刷新好友列表</string>
	<string name="refresh_request">刷新好友请求</string>
	<string name="update_location">更新位置</string>
	<string name="update_location_success">位置更新成功</string>
	<string name="refresh_map_success">地图刷新成功</string>
	<string name="sync_renren_tip">请输入您的人人网用户名和密码，以完成“牧童”与人人网的同步工作：</string>
	
<string name="place_creation_success">新建地点成功</string>
</resources>