<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="match_parent">
  <LinearLayout
  	android:id="@+id/relative1"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:orientation="vertical">
  	<CheckBox
  		android:id="@+id/customizeinfo_cate"
  		android:layout_width="match_parent"
  		android:layout_height="wrap_content"
  		android:text="@string/customizeinfo_cate"
  	/>
  	<CheckBox
  		android:id="@+id/customizeinfo_living"
  		android:layout_width="match_parent"
  		android:layout_height="wrap_content"
  		android:text="@string/customizeinfo_living"
 	 />
  	<CheckBox
  		android:id="@+id/customizeinfo_shopping"
  		android:layout_width="match_parent"
  		android:layout_height="wrap_content"
  		android:text="@string/customizeinfo_shopping"
  	/>
  	<CheckBox
  		android:id="@+id/customizeinfo_beauty"
  		android:layout_width="match_parent"
  		android:layout_height="wrap_content"
  		android:text="@string/customizeinfo_beauty"
  	/>
  	<CheckBox
  		android:id="@+id/customizeinfo_car"
  		android:layout_width="match_parent"
  		android:layout_height="wrap_content"
  		android:text="@string/customizeinfo_car"
 	 />
  </LinearLayout>
  
  <LinearLayout
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:orientation="vertical"
  	android:layout_toRightOf="@id/relative1"
  	android:layout_marginLeft="20px">
  <CheckBox
  	android:id="@+id/customizeinfo_entertainment"
  	android:layout_width="match_parent"
  	android:layout_height="wrap_content"
  	android:text="@string/customizeinfo_entertainment"
  />
  <CheckBox
  	android:id="@+id/customizeinfo_marriage"
  	android:layout_width="match_parent"
  	android:layout_height="wrap_content"
  	android:text="@string/customizeinfo_marriage"
  />
  <CheckBox
  	android:id="@+id/customizeinfo_hotel"
  	android:layout_width="match_parent"
  	android:layout_height="wrap_content"
  	android:text="@string/customizeinfo_hotel"
  />
  <CheckBox
  	android:id="@+id/customizeinfo_parent_offspring"
  	android:layout_width="match_parent"
  	android:layout_height="wrap_content"
  	android:text="@string/customizeinfo_parent_offspring"
  />
  <CheckBox
  	android:id="@+id/customizeinfo_sports"
  	android:layout_width="match_parent"
  	android:layout_height="wrap_content"
  	android:text="@string/customizeinfo_sports"
  />
  </LinearLayout>
  <Button
  	android:id="@+id/customizeinfo_confirm"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:text="@string/customizeinfo_confirm"
  	android:gravity="center"
  	android:layout_below="@id/relative1"
  />
</RelativeLayout>
