<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:background="@drawable/bg2">
	<LinearLayout android:orientation="vertical"
		android:gravity="center" android:layout_width="match_parent"
		android:layout_height="match_parent">

		<TableLayout android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TableRow android:gravity="center" android:padding="5dp">

				<TextView android:id="@+id/user_name_text" android:text="@string/user_name"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textSize="20dp" />

				<EditText android:id="@+id/user_name_edit"
					android:layout_width="180dp" android:layout_height="wrap_content" />

				<TextView android:text="*" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:textSize="20dp" />

			</TableRow>

			<TableRow android:gravity="center" android:padding="5dp">

				<TextView android:id="@+id/password_text" android:text="@string/password"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textSize="20dp" />

				<EditText android:id="@+id/password_edit" android:password="true"
					android:layout_width="180dp" android:layout_height="wrap_content" />

				<TextView android:text="*" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:textSize="20dp" />

			</TableRow>

			<TableRow android:gravity="center" android:padding="5dp">

				<TextView android:id="@+id/conform_password_text"
					android:text="@string/conform_password" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:textSize="20dp" />

				<EditText android:id="@+id/conform_password_edit"
					android:password="true" android:layout_width="180dp"
					android:layout_height="wrap_content" />

				<TextView android:text="*" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:textSize="20dp" />
			</TableRow>

			<TableRow android:gravity="center" android:padding="5dp">

				<TextView android:id="@+id/real_name_text" android:text="@string/real_name"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textSize="20dp" />

				<EditText android:id="@+id/real_name_edit"
					android:layout_width="180dp" android:layout_height="wrap_content" />

				<TextView android:text="*" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:textSize="20dp" />
			</TableRow>

		</TableLayout>

		<LinearLayout android:orientation="horizontal"
			android:padding="10dp" android:layout_width="match_parent"
			android:layout_height="wrap_content" android:gravity="center">
			<ImageView android:id="@+id/more_info"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:paddingRight="10dp" android:src="@drawable/arrow_down" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textSize="20dp"
				android:paddingLeft="10dp" android:text="@string/more_info" />
		</LinearLayout>

		<TableLayout android:id="@+id/hide_info"
			android:visibility="gone" android:orientation="vertical"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			android:gravity="center">

			<TableRow android:gravity="center" android:paddingTop="5dp"
				android:paddingBottom="5dp">

				<TextView android:id="@+id/school_text" android:text="@string/school"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textSize="20dp" />

				<EditText android:id="@+id/school_edit"
					android:layout_width="180dp" android:layout_height="wrap_content" />

			</TableRow>

			<TableRow android:gravity="center" android:paddingTop="5dp"
				android:paddingBottom="5dp">

				<TextView android:id="@+id/place_text" android:text="@string/place"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textSize="20dp" />

				<EditText android:id="@+id/place_edit"
					android:layout_width="180dp" android:layout_height="wrap_content" />

			</TableRow>

			<TableRow android:gravity="center" android:paddingTop="5dp"
				android:paddingBottom="5dp">

				<TextView android:id="@+id/birthday_text" android:text="@string/birthday"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textSize="20dp" />

				<EditText android:id="@+id/birthday_edit"
					android:layout_width="180dp" android:layout_height="wrap_content"
					android:editable="false" />

			</TableRow>

		</TableLayout>

		<CheckBox android:id="@+id/aggree_rules"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/agree_rules" />

		<TextView android:id="@+id/notes" android:text="@string/notes"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:textSize="20dp" />

		<Button android:id="@+id/register_button" android:text="@string/register"
			android:layout_width="80dp" android:layout_height="wrap_content"
			android:enabled="false" />
	</LinearLayout>
</ScrollView>

