<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:orientation="vertical" android:background="@drawable/bg2">

	<TableLayout android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TableRow android:gravity="center" android:paddingTop="15dp"
			android:paddingBottom="15dp">

			<TextView android:id="@+id/user_name_text" android:text="@string/user_name"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:textSize="20dp" android:textColor="@color/white"/>

			<EditText android:id="@+id/user_name_edit"
				android:layout_width="180dp" android:layout_height="wrap_content" />

		</TableRow>

		<TableRow android:gravity="center" android:paddingTop="15dp"
			android:paddingBottom="15dp">

			<TextView android:id="@+id/password_text" android:text="@string/password"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:textSize="20dp" android:textColor="@color/white"/>

			<EditText android:id="@+id/password_edit" android:password="true"
				android:layout_width="180dp" android:layout_height="wrap_content" />

		</TableRow>

	</TableLayout>


	<LinearLayout android:orientation="horizontal"
		android:paddingTop="15dp" android:paddingBottom="15dp"
		android:gravity="center" android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<CheckBox android:id="@+id/save_user_name"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/save_user_name" android:textColor="@color/white"
			android:background="@drawable/checkbox_background" android:button="@drawable/checkbox"/>

		<CheckBox android:id="@+id/save_password"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/save_password" android:textColor="@color/white"
			android:background="@drawable/checkbox_background" android:button="@drawable/checkbox"/>
	</LinearLayout>


	<LinearLayout android:orientation="horizontal"
		android:paddingTop="15dp" android:paddingBottom="15dp"
		android:gravity="center" android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<Button android:id="@+id/login_button" android:layout_width="80dp"
			android:layout_height="wrap_content" android:text="@string/login" />

		<Button android:id="@+id/register_button" android:layout_width="80dp"
			android:layout_height="wrap_content" android:text="@string/register" />
	</LinearLayout>

</LinearLayout>
