<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:layout_gravity="left" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:textSize="20dp"
			android:text="@string/my_checkin_times" android:paddingTop="7dp" />
		<TextView android:id="@+id/my_times" android:paddingLeft="20dp"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:textSize="20dp" android:paddingTop="8dp" />
	</LinearLayout>

	<Button android:id="@+id/placecheckin_button" android:text="@string/place_checkin_button"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal" android:background="@drawable/checkinbutton" />

	<TextView android:id="@+id/most_checked" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/place_checkin_tab"
		android:textSize="25dp" android:paddingLeft="85dp" />
	<LinearLayout android:orientation="vertical"
		android:layout_width="wrap_content" android:layout_height="wrap_content">
		<LinearLayout android:orientation="horizontal"
			android:layout_width="wrap_content" android:layout_height="wrap_content">
			<TextView android:layout_gravity="left"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:textSize="30dp" android:text="@string/user_name" />
			<TextView android:id="@+id/topuser_name"
				android:paddingLeft="20dp" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textSize="30dp" />
		</LinearLayout>

		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/request_friend"
			android:id="@+id/add_as_friend" android:layout_gravity="center_horizontal" />
	</LinearLayout>

</LinearLayout>
