<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent">
	<TableLayout android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<TableRow android:gravity="center" android:padding="10dp">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textSize="20dp"
				android:text="@string/real_name" />
			<EditText android:id="@+id/real_name_edit" android:editable="false"
				android:clickable="false" android:layout_width="180dp"
				android:layout_height="wrap_content" />
		</TableRow>
		<TableRow android:gravity="center" android:padding="10dp">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textSize="20dp"
				android:text="@string/birthday" />
			<EditText android:id="@+id/birthday_edit" android:editable="false"
				android:clickable="false" android:layout_width="180dp"
				android:layout_height="wrap_content" />
		</TableRow>
		<TableRow android:gravity="center" android:padding="10dp">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textSize="20dp"
				android:text="@string/school" />
			<EditText android:id="@+id/school_edit" android:editable="false"
				android:clickable="false" android:layout_width="180dp"
				android:layout_height="wrap_content" />
		</TableRow>
		<TableRow android:gravity="center" android:padding="10dp">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textSize="20dp"
				android:text="@string/place" />
			<EditText android:id="@+id/place_edit" android:editable="false"
				android:clickable="false" android:layout_width="180dp"
				android:layout_height="wrap_content" />
		</TableRow>
		<TableRow android:gravity="center" android:padding="10dp">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textSize="20dp"
				android:text="@string/avatar" />
			<ImageView android:id="@+id/avatar_edit"
				android:layout_width="100dp" android:layout_height="100dp"
				android:src="@drawable/lou" />
		</TableRow>
	</TableLayout>
</ScrollView>