<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" android:layout_height="wrap_content"
	android:orientation="vertical">
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:text="@string/old_password" android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>
		<EditText android:id="@+id/old_password" android:layout_width="match_parent"
		android:layout_height="wrap_content"/>
	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:text="@string/new_password" android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>
		<EditText android:id="@+id/new_password" android:layout_width="match_parent"
		android:layout_height="wrap_content"/>
	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:text="@string/new_password_again" android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>
		<EditText android:id="@+id/new_password_again" android:layout_width="match_parent"
		android:layout_height="wrap_content"/>
	</LinearLayout>
</LinearLayout>
